[package]
name = "servo-robot-driver"
version.workspace = true
edition.workspace = true

[dependencies]
servo-robot-protocol = { path = "../servo-robot-protocol" }
thiserror = "2"
flume = "0.12"
log = { workspace = true }
serialport = { workspace = true }
rand = { version = "0.10", optional = true }
tokio = { version = "1.52", features = ["rt", "sync", "time", "macros"], optional = true }

[dev-dependencies]
# 集成测试依赖（仅在启用 test feature 时使用）
servo-robot-driver = { path = ".", features = ["mock"] }

[features]
default = []
mock = ["rand"]
async = ["tokio"]
test = ["mock"]  # 启用测试，自动启用 mock
